-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.2.0
-
None
QtCreator use different kind of value to determine an invalid pid.
By example the debugger plugin use -1 as invalid pid while ProcessHandle use 0.
Probably other part of the code is to be checked as I did not checked all parts dealing with pids.
| For Gerrit Dashboard: QTCREATORBUG-17596 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 182500,4 | ProjectExplorer: Move ProcessHandle to Utils for further re-use | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |